deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: t-immunoglobulin-therapy-assignment-service-deployment
spec:
replicas: 2
selector:
matchLabels:

  app: t-immunoglobulin-therapy-assignment-service
template:
metadata:

  labels:

    app: t-immunoglobulin-therapy-assignment-service

spec:

  containers:

  - name: t-immunoglobulin-therapy-assignment-service

    image: docker.io/t-immunoglobulin-therapy-assignment-service:latest

    ports:

    - containerPort: 5000

    livenessProbe:

      httpGet:

        path: /health

        port: 5000

      initialDelaySeconds: 3

      periodSeconds: 5

    readinessProbe:

      httpGet:

        path: /health

        port: 5000

      initialDelaySeconds: 3

      periodSeconds: 5
