service.yaml
apiVersion: v1
kind: Service
metadata:
name: t-immunoglobulin-therapy-assignment-service-service
spec:
selector:
app: t-immunoglobulin-therapy-assignment-service
ports:
- protocol: TCP

  port: 80

  targetPort: 5000
